<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?colorPrimary"
    tools:context=".ui.fragment.HomeFragment">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:gravity="right"
      android:orientation="horizontal">

      <ImageView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:background="?selectableItemBackground"
        android:onClick="search"
        android:layout_weight="0.5"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_search" />

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.3"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="3dp"
          android:text="@string/do_you"
          android:textColor="@color/purple_500"
          android:textSize="15sp" />

        <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="3dp"
          android:layout_marginStart="5dp"
          android:text="@string/need"
          android:textColor="@color/teal_700"
          android:textSize="15sp" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="3dp"
          android:text="@string/service"
          android:textColor="@color/pink"
          android:textSize="15sp" />

        <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="3dp"
          android:layout_marginStart="5dp"
          android:text="@string/which"
          android:textColor="@color/purple_500"
          android:textSize="15sp" />

      </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_recyclerview" />

    <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  </LinearLayout>

</layout>
