<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
<data>
</data>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="80dp"
    android:orientation="vertical">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/img_back2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:elevation="2dp"
        android:layout_marginLeft="10dp"
        android:onClick="back"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/light_gray" />

      <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/user_info"
        android:textColor="?colorOnSecondary"
        android:textSize="16sp" />

      <ImageView
        android:id="@+id/imgSubmit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:elevation="2dp"
        android:layout_marginRight="10dp"
        android:onClick="back"
        android:src="@drawable/ic_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/light_gray" />
    </LinearLayout>
  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone" />

    <TextView
      android:id="@+id/txtRegisterDate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:gravity="center"
      tools:text="تاریخ ثبت نام : ۸ ماه پیش"
      android:textColor="?colorOnSecondary"
      android:textSize="11sp"
      android:textStyle="bold" />

      <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="12sp"
        android:layout_margin="5dp"
        android:hint="@string/user_name"
        android:maxLength="20" />

    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/edtPhone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"
      android:background="@drawable/edittext"
      android:hint="@string/your_phone"
      android:inputType="number"
      android:maxLength="11"
      android:padding="10dp"
      android:textSize="12sp" />

    <LinearLayout
      android:id="@+id/lnrLocation"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?selectableItemBackground"
      android:clickable="true"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
          android:id="@+id/txtLocation"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/choose"
          android:textSize="10sp" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="8"
          android:text="@string/location"
          android:textColor="?colorOnSecondary"
          android:textSize="13sp" />
      </LinearLayout>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_error"
        android:textColor="@android:color/holo_red_light"
        android:textSize="9sp"
        android:visibility="gone" />

    </LinearLayout>

  </LinearLayout>
  </androidx.core.widget.NestedScrollView>
  </LinearLayout>
</layout>
