<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <data>
  </data>
<LinearLayout
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="?colorPrimary"
  tools:context=".ui.fragment.HomeFragment">

  <ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/textView7"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/my_profile"
    android:textColor="?colorOnSecondary"
    android:layout_margin="10dp"
    android:textSize="16sp" />

  <TextView
    android:id="@+id/txtSignOutDescription"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:textSize="13sp"
    />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_gray_button"
    android:padding="10dp"
    android:layout_marginStart="15dp"
    android:onClick="logout"
    android:textSize="11sp"
    android:text="@string/sign_out" />

  <View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:layout_margin="20sp"
    android:background="@color/light_gray" />

  <LinearLayout
    android:id="@+id/lnrMyPosts"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:clickable="true"
    android:background="?selectableItemBackground"
    android:padding="17dp">

    <ImageView
      android:id="@+id/imageView3"
      android:layout_width="12sp"
      android:layout_height="match_parent"
      android:layout_marginStart="5dp"
      android:src="@drawable/ic_back"
      app:tint="@color/light_gray" />

    <TextView
      android:id="@+id/textView10"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/my_posts"
      android:textColor="?colorOnSecondary"
      android:textSize="12sp" />

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginEnd="5dp"
      android:layout_marginStart="12dp"
      android:src="@drawable/ic_user" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/lnrRecent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:clickable="true"
    android:background="?selectableItemBackground"
    android:padding="17dp">

    <ImageView
      android:layout_width="12sp"
      android:layout_height="match_parent"
      android:layout_marginStart="5dp"
      android:src="@drawable/ic_back"
      app:tint="@color/light_gray" />

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/my_recently"
      android:textColor="?colorOnSecondary"
      android:textSize="12sp" />

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginEnd="5dp"
      android:layout_marginStart="12dp"
      android:src="@drawable/ic_history" />

  </LinearLayout>

  <View
    android:id="@+id/view3"
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:layout_margin="20sp"
    android:background="@color/light_gray" />

  <LinearLayout
    android:id="@+id/lnrTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:orientation="horizontal"
    android:padding="17dp">

    <ImageView
      android:layout_width="12sp"
      android:layout_height="match_parent"
      android:layout_marginStart="5dp"
      android:src="@drawable/ic_back"
      app:tint="@color/light_gray" />

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/theme"
      android:textColor="?colorOnSecondary"
      android:textSize="12sp" />

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginEnd="5dp"
      android:layout_marginStart="12dp"
      android:src="@drawable/ic_moon" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/lnrUserInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:orientation="horizontal"
    android:padding="17dp">

    <ImageView
      android:layout_width="12sp"
      android:layout_height="match_parent"
      android:layout_marginStart="5dp"
      android:src="@drawable/ic_back"
      app:tint="@color/light_gray" />

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/user_info"
      android:textColor="?colorOnSecondary"
      android:textSize="12sp" />

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginEnd="5dp"
      android:layout_marginStart="12dp"
      android:src="@drawable/ic_edit" />

  </LinearLayout>
</LinearLayout>
</layout>
